--- a/App_PCC/App_PCC/Views/HomeDetail.xaml
+++ b/App_PCC/App_PCC/Views/HomeDetail.xaml
@@ -23,14 +23,14 @@
                 <RowDefinition Height="*"/>
             </Grid.RowDefinitions>
             <Image Source="unifaat.png" HeightRequest="70" VerticalOptions="StartAndExpand"/>
-            <Label Grid.Row="0" Text="Informações do Aluno" HorizontalOptions="Center" FontAttributes="Bold" VerticalOptions="Center"  FontSize="Large"/>
+            <Label Grid.Row="0" Text="Informações do Aluno" HorizontalOptions="Center" FontAttributes="Bold" VerticalOptions="End"  FontSize="Large"/>
             <Grid Grid.Row="1">
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="*"/>
                     <ColumnDefinition Width="*"/>
                 </Grid.ColumnDefinitions>
-                <Entry Grid.Column="0" x:Name="etRA" Placeholder="RA" IsEnabled="False" PlaceholderColor="Black" FontSize="Large" />
-                <Entry Grid.Column="1" x:Name="etNome" Placeholder="Nome" IsEnabled="False" PlaceholderColor="Black" FontSize="Large" />
+                <Entry Grid.Column="0" x:Name="etRA" Placeholder="RA" IsEnabled="False" PlaceholderColor="Black" FontSize="17" />
+                <Entry Grid.Column="1" x:Name="etNome" Placeholder="Nome" IsEnabled="False" PlaceholderColor="Black" FontSize="17" />
             </Grid>
             <!-- <Entry Grid.Row="1" x:Name="etNome" Placeholder="Nome" IsEnabled="False" PlaceholderColor="Black" FontSize="16"/>
             <Entry Grid.Row="2" x:Name="etRA" Placeholder="RA" PlaceholderColor="Black" IsEnabled="false" FontSize="16 -->
@@ -38,17 +38,17 @@
             <!--<Button Text="Login" BackgroundColor="#2A6791" TextColor="White" HeightRequest="50" VerticalOptions="Start" Grid.Row="3" Clicked="Login"/>
             <Label Text="Atendimento Secretaria" HorizontalOptions="Center" Grid.Row="4" Margin="0,10,0,0" FontSize="12"/> -->
 
-
-            <Grid Grid.Row="5">
+            <Label Grid.Row="5" HorizontalOptions="Center" />
+            <Grid Grid.Row="6">
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="*"/>
                     <ColumnDefinition Width="Auto"/>
                     <ColumnDefinition Width="*"/>
                 </Grid.ColumnDefinitions>
 
-                <!--<Label BackgroundColor="#bababa" HeightRequest="1" HorizontalOptions="FillAndExpand" VerticalOptions="Center"/>
+                <Label BackgroundColor="#bababa" HeightRequest="1" HorizontalOptions="FillAndExpand" VerticalOptions="Center"/>
                 <Image Source="ticket_2.png" Grid.Column="1" VerticalOptions="Center" Margin="10,0,10,0"/>
-                <Label BackgroundColor="#bababa" Grid.Column="2" HeightRequest="1" HorizontalOptions="FillAndExpand" VerticalOptions="Center"/> -->
+                <Label BackgroundColor="#bababa" Grid.Column="2" HeightRequest="1" HorizontalOptions="FillAndExpand" VerticalOptions="Center"/>
             </Grid>
         </Grid>
     </Grid>
