--- a/App_PCC/App_PCC/Views/Chamado.xaml
+++ b/App_PCC/App_PCC/Views/Chamado.xaml
@@ -22,8 +22,8 @@
                     
                 </Grid.RowDefinitions>
                 <Label Text="Solicitação de Senha" HorizontalOptions="Center" VerticalOptions="Start" Grid.Row="0" Margin="0,10,0,0" FontSize="Large" FontAttributes="Bold"/>
-                <Picker Title="Selecione o Setor" x:Name="pSetor" ItemDisplayBinding="{Binding set_st_desc}" Grid.Row="1" HorizontalOptions="FillAndExpand" SelectedIndexChanged="PSetor_SelectedIndexChanged" />
-                <Picker Title="Informe o Motivo" x:Name="pMotivo" ItemDisplayBinding="{Binding mot_st_desc}" Grid.Row="2" HorizontalOptions="FillAndExpand"/>
+                <Picker Title="1º Selecione o Setor" x:Name="pSetor" ItemDisplayBinding="{Binding set_st_desc}" Grid.Row="1" HorizontalOptions="FillAndExpand" SelectedIndexChanged="PSetor_SelectedIndexChanged" />
+                <Picker Title="2º Informe o Motivo" x:Name="pMotivo" ItemDisplayBinding="{Binding mot_st_desc}" Grid.Row="2" HorizontalOptions="FillAndExpand"/>
                 <Editor x:Name="Desc" Keyboard="Plain" Grid.Row="3" Placeholder="Insira uma breve descrição do chamado" HorizontalOptions="FillAndExpand" VerticalOptions="FillAndExpand"/>
                 <Button Text="Gerar Senha" x:Name="Salvar" BackgroundColor="#2A6791" TextColor="White" HeightRequest="50" VerticalOptions="End" Grid.Row="4" Clicked="Salvar_Clicked" />
                 
