--- a/App_PCC/App_PCC/Views/NovoChamado.xaml
+++ b/App_PCC/App_PCC/Views/NovoChamado.xaml
@@ -22,8 +22,8 @@
 
                 </Grid.RowDefinitions>
                 <Image Source="unifaat.png" Grid.Row="0" HeightRequest="70" VerticalOptions="Start"/>
-                
-                <Label Text="Solicitação de senha" x:Name="lbTeste" HorizontalOptions="Center" VerticalOptions="Center" Grid.Row="2" Margin="0,10,0,0" FontSize="Large" FontAttributes="Bold"/>
+
+                <Label Text="Solicitação de senha" x:Name="lbTeste" TextColor="#2A6791" HorizontalOptions="Center" VerticalOptions="Center" Grid.Row="2" Margin="0,10,0,0" FontSize="Large" FontAttributes="Bold"/>
                 <Picker Title="1º Selecione o setor" x:Name="pSetor"  Grid.Row="3" HorizontalOptions="FillAndExpand" SelectedIndexChanged="PSetor_SelectedIndexChanged" />
                 <Picker Title="2º Selecione o motivo" x:Name="pMotivo" Grid.Row="4" HorizontalOptions="FillAndExpand"/>
                 <Editor x:Name="Desc" Keyboard="Plain" Grid.Row="5" Placeholder="3º Insira uma breve descrição do chamado" HorizontalOptions="FillAndExpand" VerticalOptions="FillAndExpand"/>
