Atualização na tela de solicitação de senha
Criei um novo método para verificar e informar quantas senhas já estão na frente antes mesmo do aluno solicitar uma.

--- a/App_PCC/App_PCC/Views/NovoChamado.xaml
+++ b/App_PCC/App_PCC/Views/NovoChamado.xaml
@@ -17,8 +17,10 @@
                     <RowDefinition Height="Auto"/>
                     <RowDefinition Height="Auto"/>
                     <RowDefinition Height="*"/>
+                    <RowDefinition Height="Auto"/>
                     <RowDefinition Height="*"/>
                     <RowDefinition Height="40"/>
+                    
 
                 </Grid.RowDefinitions>
                 <Image Source="unifaat.png" Grid.Row="0" HeightRequest="70" VerticalOptions="Start"/>
@@ -27,9 +29,10 @@
                 <Picker Title="1º Selecione o setor" x:Name="pSetor"  Grid.Row="3" HorizontalOptions="FillAndExpand" SelectedIndexChanged="PSetor_SelectedIndexChanged" />
                 <Picker Title="2º Selecione o motivo" x:Name="pMotivo" Grid.Row="4" HorizontalOptions="FillAndExpand"/>
                 <Editor x:Name="Desc" Keyboard="Plain" Grid.Row="5" Placeholder="3º Insira uma breve descrição do chamado" HorizontalOptions="FillAndExpand" VerticalOptions="FillAndExpand"/>
-                <Button Text="Gerar Senha" x:Name="Salvar" BackgroundColor="#2A6791" TextColor="White" HeightRequest="50" VerticalOptions="End" Grid.Row="6" Clicked="Salvar_ClickedAsync"/>
+                <Label Grid.Row="6" Text="Senhas na frente: " x:Name="lbSenhaFrente" TextColor="#2A6791" FontSize="Large" FontAttributes="Bold"/>
+                <Button Text="Gerar Senha" x:Name="Salvar" BackgroundColor="#2A6791" TextColor="White" HeightRequest="50" VerticalOptions="End" Grid.Row="7" Clicked="Salvar_ClickedAsync"/>
 
-                <Grid Grid.Row="7">
+                <Grid Grid.Row="8">
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="*"/>
                         <ColumnDefinition Width="Auto"/>
