--- a/App_PCC/App_PCC/MainPage.xaml
+++ b/App_PCC/App_PCC/MainPage.xaml
@@ -21,16 +21,18 @@
                 <RowDefinition Height="Auto"/>
                 <RowDefinition Height="40"/>
                 <RowDefinition Height="40"/>
+                <RowDefinition Height="40"/>
                 <RowDefinition Height="*"/>
             </Grid.RowDefinitions>
             <Image Source="unifaat.png" HeightRequest="70" VerticalOptions="EndAndExpand"/>
             <Entry Grid.Row="1" x:Name="etLogin" Placeholder="RA" PlaceholderColor="#bababa" Keyboard="Numeric" FontSize="16"/>
             <Entry Grid.Row="2" x:Name="etSenha" Placeholder="Senha" PlaceholderColor="#bababa" IsPassword="true" FontSize="16"/>
             <Button Text="Login" BackgroundColor="#2A6791" TextColor="White" HeightRequest="50" VerticalOptions="Start" Grid.Row="3" Clicked="LoginAsync"/>
-            <Label Text="Atendimento Secretaria" HorizontalOptions="Center" Grid.Row="4" Margin="0,10,0,0" FontSize="12"/>
-          
+            <Label Text="Atendimento Secretaria" HorizontalOptions="Center" Grid.Row="4" Margin="0,10,0,0" FontSize="13" TextColor="#2A6791"/>
+            <ActivityIndicator Grid.Row="5" x:Name="actInd" IsRunning="True" IsVisible="False" Color="#2A6791"/>
 
-            <Grid Grid.Row="5">
+
+            <Grid Grid.Row="6">
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="*"/>
                     <ColumnDefinition Width="Auto"/>
