--- a/App_PCC/App_PCC/Views/AlterarSenha.xaml
+++ b/App_PCC/App_PCC/Views/AlterarSenha.xaml
@@ -19,7 +19,7 @@
                 <RowDefinition Height="Auto"/>
                 <RowDefinition Height="Auto"/>
                 <RowDefinition Height="Auto"/>
-                <RowDefinition Height="Auto"/>
+                <RowDefinition Height="*"/>
                 <RowDefinition Height="40"/>
                 <RowDefinition Height="*"/>
             </Grid.RowDefinitions>
@@ -45,7 +45,7 @@
             <Entry Grid.Row="3" x:Name="etSenhaAtual" Placeholder="Senha atual" IsPassword="true"/>
             <Entry Grid.Row="4" x:Name="etNovaSenha" Placeholder="Nova senha" IsPassword="true"/>
             <Entry Grid.Row="5" x:Name="etConfirmaSenha" Placeholder="Confirmar senha" IsPassword="true" />
-            <Button Grid.Row="6" x:Name="btAlterarSenha" Text="Alterar senha" BackgroundColor="#2A6791" TextColor="White" HeightRequest="50" VerticalOptions="Center" Clicked="BtAlterarSenha_Clicked"/>
+            <Button Grid.Row="6" x:Name="btAlterarSenha" Text="Alterar senha" BackgroundColor="#2A6791" TextColor="White" HeightRequest="50" VerticalOptions="End" Clicked="BtAlterarSenha_Clicked"/>
 
             <!-- <Label Grid.Row="5" HorizontalOptions="Center" /> -->
             <Grid Grid.Row="7">
